fix(index.html, styles.css): Refactored CSS styles for improved readability and code reusability
Added the section-content class to multiple sections, allowing for easier styling and consistency across the site. Also, removed unnecessary code and simplified some styles.

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,21 @@ h5 {
     display: flex;
 }
 
+.section-content{
+    height: max-content;
+
+    justify-content: center;
+    align-items: flex-start;
+
+    margin-top: 5%;
+    margin-bottom: 5%;
+
+    display: flex;
+    flex-direction: column;
+
+    width: 85%;
+
+}
 .welcome {
     /* background-image: url("../images/jack-sharp-ShCVvQbQBDk-unsplash.jpg"); */
     /* background-size: 100% 100%; */
@@ -119,13 +134,7 @@ h5 {
 .values {
     border: 1px solid yellow;
 
-    height: max-content;
 
-    justify-content: center;
-    align-items: flex-start;
-
-    margin-top: 5%;
-    margin-bottom: 5%;
 }
 
 .values-content {
@@ -136,6 +145,8 @@ h5 {
     align-items: center;
     width: 85%;
 }
+
+
 
 .church-values {
     display: flex;
@@ -220,18 +231,11 @@ h5 {
 }
 
 .testimonials .testimonials-content {
-    width: 85%;
     border: 1px solid red;
 
     height: 100%;
-
-    display: flex;
-    flex-direction: column;
-
-    /* justify-content: center; */
     align-items: center;
-    margin-top: 5%;
-    margin-bottom: 5%;
+
 }
 
 .testimonial-card {
@@ -269,20 +273,13 @@ h5 {
 }
 
 .team-content {
-    width: 85%;
 
     border: 1px solid blue;
 
     display: flex;
-    flex-direction: column;
-
     align-items: center;
-    justify-content: flex-start;
 
     gap: 10px;
-
-    margin-top: 5%;
-    margin-bottom: 5%;
 }
 
 .team .heading {
@@ -331,15 +328,8 @@ h5 {
 }
 
 .whatwedo-content {
-    width: 85%;
-
-    display: flex;
-    flex-direction: column;
     align-items: center;
     border: 1px solid red;
-
-    margin-top: 5%;
-    margin-bottom: 5%;
 }
 
 .whatwedo .description-container {
@@ -385,14 +375,8 @@ h5 {
 }
 
 .subscribe-content {
-    width: 85%;
-    height: 30vh;
-
-    display: flex;
-    flex-direction: column;
+    height: 25vh;
     align-items: center;
-
-    margin-top: 5%;
 
     border: 2px solid salmon;
 }
@@ -473,6 +457,20 @@ h5 {
     .subscribe-button {
         width: 500px;
     }
+
+
+
+
+
+
+
+/* ANIMATION FOR WIDER SCREEN (DESKTOP + IPAD) */
+/* HOLD ON LET ME REFACTOR MY CSS STYLES TO IMPROVE READABILITY AND CODE RE-USABILITY, VERY IMPORTANT  */
+
+
+
+
+
 }
 
 
